2007-06-27  nphilipp  <nphilipp@redhat.com>

	* system-config-services.desktop.in, system-config-services.spec:
	fix desktop file category (#245891)

2007-06-17  tombo  <tombo@redhat.com>

	* po/it.po: updated some entry with better translation

2007-06-13  alan  <alan@redhat.com>

	* po/en_GB.po: Autotranslator

2007-06-10  raven  <raven@redhat.com>

	* po/pl.po: Updated Polish Translation

2007-05-04  nphilipp  <nphilipp@redhat.com>

	* ChangeLog: *** empty log message ***

	* system-config-services.spec: pick up updated translations (#223447)

2007-05-04  trinks  <trinks@redhat.com>

	* po/de.po: *** empty log message ***

2007-05-04  nphilipp  <nphilipp@redhat.com>

	* system-config-services.spec: pick up updated translations (#223447)

2007-05-04  trinks  <trinks@redhat.com>

	* po/de.po: *** empty log message ***

2007-04-30  eukim  <eukim@redhat.com>

	* po/ko.po: Updated

2007-04-25  nphilipp  <nphilipp@redhat.com>

	* ChangeLog: *** empty log message ***

	* po/uk.po, po/ur.po, po/vi.po, po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/ro.po, po/ru.po, po/si.po, po/sk.po, po/sl.po, po/sq.po, po/sr.po, po/sr@Latn.po, po/sv.po, po/system-config-services.pot, po/ta.po, po/te.po, po/tr.po, po/is.po, po/it.po, po/ja.po, po/ka.po, po/kn.po, po/ko.po, po/ku.po, po/lo.po, po/lt.po, po/lv.po, po/mk.po, po/ml.po, po/mr.po, po/ms.po, po/my.po, po/nb.po, po/nl.po, po/no.po, po/or.po, po/pa.po, po/pl.po, po/pt.po, po/ar.po, po/as.po, po/bg.po, po/bn.po, po/bn_IN.po, po/bs.po, po/ca.po, po/cs.po, po/cy.po, po/da.po, po/de.po, po/el.po, po/en_GB.po, po/es.po, po/et.po, po/fa.po, po/fi.po, po/fr.po, po/gu.po, po/he.po, po/hi.po, po/hr.po, po/hu.po, po/hy.po, po/id.po, system-config-services.spec:
	pick up updated translations
	work around issues with UTF-8 in translatable strings (#232809)

2007-04-25  nphilipp  <nphilipp@redhat.com>
