@@ -1,7 +1,7 @@
 # -*- RPM-SPEC -*-
 Summary: system-config-services is an initscript and xinetd configuration utility
 Name: system-config-services
-Version: 0.9.9
+Version: 0.9.10
 Release: 1%{?dist}
 URL: http://fedoraproject.org/wiki/SystemConfig/services
 # We are upstream, thus the source is only available from within this source
@@ -78,6 +78,10 @@ rm -rf %{buildroot}
 %{_mandir}/*/system-config-services.8*
 
 %changelog
+* Mon Jul 23 2007 Nils Philippsen <nphilipp@redhat.com> - 0.9.10
+- make "make archive" work with Hg
+- disable automatic ChangeLog generation
+
 * Wed Jun 27 2007 Nils Philippsen <nphilipp@redhat.com> - 0.9.9
 - fix desktop file category (#245891)
 
